Fixed structure and other things
fixed structure, added accidentally deleted files, admin added, fixed cooking mode screen